src/objects/ints__Lenddo_Response__c.object
<CustomObject>
    <description>Object to hold the response data from Lenddo verification. The Lenddo verification process is asynchronous.
Refer LenddoWebServiceAPI and LenddoResponse classes for more info.</description>
    <fields>
        <fullName>ints__Birthday_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag.
LenddoResponse.Verification.birthday</description>
        <label>Birthday Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lenddo Response</relationshipLabel>
        <relationshipName>Lenddo_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag.
LenddoResponse.Verification.email_verified</description>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Employer_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag.
LenddoResponse.Verification.employer</description>
        <label>Employer Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Facebook_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag. 
LenddoResponse.Verification.facebook_verified</description>
        <label>Facebook Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Flags__c</fullName>
        <label>Flags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Name_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag. 
LenddoResponse.Verification.name</description>
        <label>Name Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Phone_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag. 
LenddoResponse.Verification.external_phone</description>
        <label>Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__Top_Employer_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag. 
LenddoResponse.Verification.top_employer</description>
        <label>Top Employer Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__University_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>verifications JSON tag. 
LenddoResponse.Verification.university</description>
        <label>University Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__client_id__c</fullName>
        <label>client_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__member_id__c</fullName>
        <label>member_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__partner_id__c</fullName>
        <label>partner_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lenddo Response</label>
    <nameField>
        <displayFormat>LVR-{0000000000}</displayFormat>
        <label>Lenddo Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lenddo Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>